--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint && tsc --noEmit",
     "test": "jest",
     "test:watch": "jest --watch",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@emotion/react": "^11.9.3",
