--- a/package.json
+++ b/package.json
@@ -15,19 +15,24 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
-    "@prisma/client": "^4.1.1",
+    "@hookform/resolvers": "^2.9.7",
+    "@prisma/client": "^4.2.1",
     "@trpc/client": "^9.26.2",
     "@trpc/next": "^9.26.2",
     "@trpc/react": "^9.26.2",
     "@trpc/server": "^9.26.2",
+    "argon2": "^0.28.7",
     "immer": "^9.0.15",
     "next": "12.2.2",
+    "next-auth": "^4.10.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.34.0",
     "react-query": "^3.39.2",
     "react-use": "^17.4.0",
     "uuid": "^8.3.2",
-    "zod": "^3.17.9"
+    "zod": "^3.17.9",
+    "zustand": "^4.0.0"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.18.6",
@@ -56,7 +61,7 @@
     "jest-environment-jsdom": "^28.1.3",
     "prettier": "2.7.1",
     "prettier-plugin-prisma": "^4.1.0",
-    "prisma": "^4.1.1",
+    "prisma": "^4.2.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   }
